Opened 15 years ago

Closed 15 years ago

#774 closed defect (fixed)

zzufed .thp file crashes ffmpeg_g(memory exceeded)

Reported by: Diana Muscalu Owned by:
Priority: important Component: avformat
Version: git-master Keywords: thp OOM
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

==3224== Memcheck, a memory error detector
==3224== Copyright (C) 2002-2010, and GNU GPL'd, by Julian Seward et al.
==3224== Using Valgrind-3.6.1-Debian and LibVEX; rerun with -h for copyright info
==3224== Command: /home/vlad/Desktop/ffmpeg/ffmpeg_g -i corruptfile -f null -
==3224==
ffmpeg version N-35772-g366605f, Copyright (c) 2000-2011 the FFmpeg developers

built on Dec 13 2011 22:32:03 with gcc 4.6.1
configuration:
libavutil 51. 32. 0 / 51. 32. 0
libavcodec 53. 44. 0 / 53. 44. 0
libavformat 53. 25. 0 / 53. 25. 0
libavdevice 53. 4. 0 / 53. 4. 0
libavfilter 2. 53. 0 / 2. 53. 0
libswscale 2. 1. 0 / 2. 1. 0

==3224== Warning: set address range perms: large range [0x393c9080, 0x793ca040) (undefined)
==3224== Warning: set address range perms: large range [0x393c9070, 0x793ca050) (noaccess)
[thp @ 0x5674820] Could not find codec parameters (Video: thp, 608x320)
[thp @ 0x5674820] Estimating duration from bitrate, this may be inaccurate
Input #0, thp, from 'corruptfile':

Duration: N/A, bitrate: N/A

Stream #0:0: Video: thp, 608x320, 29.97 tbr, 29.97 tbn, 29.97 tbc
Stream #0:1: Audio: adpcm_thp, 32000 Hz, 2 channels, s16

Video pixel format is unknown, stream cannot be encoded
==3224==
==3224== HEAP SUMMARY:
==3224== in use at exit: 385 bytes in 2 blocks
==3224== total heap usage: 69 allocs, 67 frees, 1,074,040,388 bytes allocated
==3224==
==3224== LEAK SUMMARY:
==3224== definitely lost: 384 bytes in 1 blocks
==3224== indirectly lost: 0 bytes in 0 blocks
==3224== possibly lost: 0 bytes in 0 blocks
==3224== still reachable: 1 bytes in 1 blocks
==3224== suppressed: 0 bytes in 0 blocks
==3224== Rerun with --leak-check=full to see details of leaked memory
==3224==
==3224== For counts of detected and suppressed errors, rerun with: -v
==3224== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 4 from 4)

Attachments (2)

corruptfile (1.0 MB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )
valgrind.txt (1.9 KB ) - added by Diana Muscalu 15 years ago.
valgrind report

Download all attachments as: .zip

Change History (4)

by Diana Muscalu, 15 years ago

Attachment: corruptfile added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

by Diana Muscalu, 15 years ago

Attachment: valgrind.txt added

valgrind report

comment:1 by Diana Muscalu, 15 years ago

Summary: zzufed .thp file crashes ffmpeg_g sig11zzufed .thp file crashes ffmpeg_g(memory exceeded)

comment:2 by Michael Niedermayer, 15 years ago

Component: FFmpegavformat
Keywords: thp OOM added
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.