thpdemux: Check that packed sizes are within the files data size and filesize. Fixes Ticket774 Bug found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>